-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
mdd_changelog_is_space_safe() uses changelog size estimation instead of direct calculations to safe time, meanwhile it was implemented incorrectly. Estimation is based on llog_cat_free_space() function which result is subtracted from total possible amount of space. That is not correct, that function returns amount of llog slots where new plain llogs can be added, it is not related with amount of consumed space - llog catalog may have empty gaps where new llogs can't be added but they doesn't consume space. That cause situations when GC is triggered without real need
More correct would be use just llh_count as amount of plain llog being used to estimate consumed space.
Another step to improve - when estimation shows that GC is needed - the procedure to calculate real size can be run to prove that GC is needed