LU-19411 changelog: fix wrong GC triggering

There are couple issues with changelog GC triggering
and size estimation

- don't use llog_cat_free_space() for size estimation
  because that is not opposite to space consumed. It
  counts catalog slots available for new llog but that
  doesn't mean all other slots are occupied.
  Use llh_count instead as that is exactly amount of
  plain llogs really used.
- fix wrong llog used in mdd_chlg_garbage_collect() for
  llog_cat_size() calculation - it was using
  changelog_users ctxt instead of changelog_catalog.
- if estimation turns GC on, then GC always check real
  changelog size before purging any user.
- in emergency mode purge just the oldest user and turn
  emergency off in each GC run
- don't use CWARN() for estimated values, just for real

Fixes: bec1334954 ("LU-15524 mdd: trigger changelog GC by free space")
Signed-off-by: Mikhail Pershin <mpershin@whamcloud.com>
Change-Id: I91b005495329940252159aa06b9774a1c24a9b68
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/61536
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Emoly Liu <emoly@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>